Thu Jul 24 15:56:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:

          . Bug fix where the complex attribute parser was not
            constructing a valid path for the complex attribute filename.

Thu Jul 24 15:10:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC.cpp:
        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:

          . Bug fix where the temporary file created for the .xme was
            not deleted when the program exited.

          . Updated the log messages to use ACE_Log_Msg correctly. ;-)

Thu Jul 24 04:56:48 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/T2M.mpc:

          . Change the name of the project file, and the name of the
            target executable.

        * MDE/GME/T2M/Text2Model.mpc:

          Removed this file.

Thu Jul 24 04:50:27 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/parsers/Scatter_Deployment:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Deployment_Map.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_Manager.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_Manager.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_T.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_T.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.mpc:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser_export.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/stdafx.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/stdafx.cpp:
