@@ -1,3 +1,13 @@
+Thu Jul 24 16:53:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:
+
+          . Added some debug output to the parser.
+
+        * MDE/GME/naomi/GNC_App.cpp:
+
+          . Fixed bug in a debug statement.
+
 Thu Jul 24 15:56:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/naomi/GNC_App.h:
